# library-arm

./: .env  .env-non-dev  .gitignore  Dockerfile  README.md  docker-compose.yml  just.py  pyproject.toml  requirements.txt
app/: config.py  conftest.py  exceptions.py  main.py
app/admin/: auth.py  views.py
app/administration/: router.py
app/administration/mock_files/: mock_authors.json  mock_book_transactions.json  mock_books.json  mock_customers.json  mock_genres.json  mock_users.json
app/authors/: dao.py  models.py  router.py  schemas.py
app/book_transactions/: dao.py  models.py  router.py  schemas.py
app/books/: dao.py  models.py  router.py  schemas.py
app/customers/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/database/: data_sql.py  db.py  db_pull.py  table_sql.py  test_data.sql
app/genres/: dao.py  models.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 84c29e3057b8_initial_migrate.py
app/pages/: router.py
app/static/css/: style.css
app/templates/: index.html  template_report.html
app/tests/: conftest.py
app/tests/integration_tests/test_books/: test_dao.py
app/tests/integration_tests/test_users/: test_api.py
app/tests/unit_tests/: test_dao.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py
