[tool.poetry]
name = "library-backend"
version = "0.1.0"
description = ""
authors = ["Smaeryy <grazylon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
gunicorn = "^21.2.0"
sqladmin = "^0.15.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
